# gharmind-ai

./: .env.example  ARCHITECTURE_OVERVIEW.md  DEMO_SCRIPT.md  DEMO_TALKING_POINTS.md  PHASE1_TASK_LIST.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  chat.py  households.py  predictions.py  router.py  routines.py  simulator.py  twin.py
backend/app/core/: __init__.py  exceptions.py  middleware.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  calendar.py  event_log.py  household.py  prediction.py  routine.py  twin.py
backend/app/services/: __init__.py  chat_service.py  cultural_intelligence.py  household_service.py  memory_service.py  prediction_engine.py  twin_service.py  whatif_simulator.py
backend/app/services/bedrock/: __init__.py  claude_client.py  prompts.py  titan_client.py
backend/scripts/: API_EXAMPLES.md  DEMO_WALKTHROUGH.md  __init__.py  seed_coimbatore_demo.py  test_api_curl.sh  test_api_powershell.ps1
docs/ai/: AGENT_ARCHITECTURE.md  BEDROCK_INTEGRATION.md  CONTEXT_ENGINE.md  PREDICTION_ENGINE.md
docs/api/: API_DESIGN.md  OPENAPI_SPEC.yaml
docs/database/: ERD.md  SCHEMA.md
docs/flows/: DATA_FLOW.md  USER_JOURNEY.md
docs/frontend/: FRONTEND_ARCHITECTURE.md
docs/infra/: INFRASTRUCTURE.md
docs/simulator/: WHATIF_SIMULATOR.md
docs/twin/: DIGITAL_TWIN_DESIGN.md  ROUTINE_PATTERNS.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  shadcn.config.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: IntelligencePanels.tsx
frontend/lib/: api.ts  intelligence-data.ts  utils.ts
frontend/types/: household.ts  prediction.ts
infra/aws/: bedrock-iam-policy.json
scripts/: demo_state.json  seed_demo_data.py
